"""BUILD file for faster_lio_interfaces ROS2 messages"""

load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

package(default_visibility = ["//visibility:public"])

ros2_interface_library(
    name = "faster_lio_interfaces",
    srcs = [
        "CustomMsg.msg",
        "CustomPoint.msg", 
        "Pose6D.msg",
    ],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_common_interfaces//:geometry_msgs",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_faster_lio_interfaces",
    deps = [":faster_lio_interfaces"],
)
